--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,24 @@ cache:
 
 script: "./gradlew clean build"
 
+
+before_deploy:
+    - zip -r webservice
+    - mkdir -p deploy
+    - mv webservice.zip deploy/webservice.zip
+
+deploy:
+    - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
+    bucket: mj-springboot-build
+    region: ap-northease-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
