--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "gradlew clean build"
+script: "./gradlew clean build"
 
 
 before_deploy:
@@ -22,15 +22,15 @@ before_deploy:
 
 deploy:
     - provider: s3
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      bucket: mj-springboot-build
+      region: ap-northease-2
+      skip_cleanup: true
+      acl: private
+      local_dir: deploy
+      wait-until-deployed: true
 
-    bucket: mj-springboot-build
-    region: ap-northease-2
-    skip_cleanup: true
-    acl: private
-    local_dir: deploy
-    wait-until-deployed: true
 
 # CI 실행 완료시 메일로 알람
 notifications:
