--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "gradlew clean build"
+script: "./gradlew clean build"
+
+before_install:
+  - chmod +x gradlew
 
 # CI 실행 완료시 메일로 알람
 notifications:
