--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: mj-springboot-build
-    region: ap-northease-2
+    region: ap-northeast-2
     skip_cleanup: true
     acl: private
     local_dir: deploy
