AWS CodeDeploy 연동

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,16 @@ deploy:
     acl: private
     local_dir: deploy
     wait-until-deployed: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: mj-springboot-build
+    key: webservice.zip
+    bundle_type: zip
+    application: webservice
+    deployment_group: webservice-group
+    region: ap-northeast-2
+    wait-untill-deployed: true
 
 # CI 실행 완료시 메일로 알람
 notifications:
