--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ deploy:
     acl: private
     local_dir: deploy
     wait-until-deployed: true
+
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
@@ -44,6 +45,7 @@ deploy:
     wait-untill-deployed: true
 
 # CI 실행 완료시 메일로 알람
+# test
 notifications:
   email:
     recipients:
