--- a/.travis.yml
+++ b/.travis.yml
@@ -34,15 +34,16 @@ deploy:
     wait-until-deployed: true
 
   - provider: codedeploy
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    bucket: mj-springboot-build
-    key: webservice.zip
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: mj-springboot-build # S3 버킷
+    key: webservice.zip # 빌드 파일을 압축해서 전달
     bundle_type: zip
-    application: webservice
-    deployment_group: webservice-group
+    application: webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
+
 
 # CI 실행 완료시 메일로 알람
 # test
